# sdl_ogl

./: .gitignore  CMakeLists.txt
assets/shaders/: cube_textured.frag  light.frag  shader.frag  shader.vert
glad/include/glad/: glad.h
glad/src/: glad.c
include/: Camera.h  Shader.h  Texture.h
shaders/: cube.frag
src/: Camera.cpp  Texture.cpp  main.cpp
